--- a/index.html
+++ b/index.html
@@ -33,71 +33,71 @@
             <tr>
                 <td>MNEASYRPROD_ZEKE</td>
                 <td>GES PROYECTOS</td>
-                <td>172.20.34.29</td>
-                <td>172.20.28.29</td>
+                <td>172.20.34.30</td>
+                <td>172.20.28.30</td>
                 <td>Escalado a Infra</td>
             </tr>
             <!-- Repetir el formato para otras filas -->
             <!-- Insertar filas de datos aquí -->
             <tr>
-                <td>MNEASYRPROD_ZEKE</td>
-                <td>GES PROYECTOS</td>
-                <td>172.20.34.29</td>
-                <td>172.20.28.29</td>
+                <td>MNSVNPROD_ZEKE1</td>
+                <td>SVN</td>
+                <td>172.20.34.31</td>
+                <td>172.20.28.31</td>
                 <td>Escalado a Infra</td>
             </tr>
             <!-- Repetir el formato para otras filas -->
             <!-- Insertar filas de datos aquí -->
             <tr>
-                <td>MNEASYRPROD_ZEKE</td>
-                <td>GES PROYECTOS</td>
-                <td>172.20.34.29</td>
-                <td>172.20.28.29</td>
+                <td>MNIBMI2ANALYTSPROD_ZEKE</td>
+                <td>I2</td>
+                <td>172.20.34.40</td>
+                <td>172.20.28.39</td>
                 <td>Escalado a Infra</td>
             </tr>
             <!-- Repetir el formato para otras filas -->
             <!-- Insertar filas de datos aquí -->
             <tr>
-                <td>MNEASYRPROD_ZEKE</td>
-                <td>GES PROYECTOS</td>
-                <td>172.20.34.29</td>
-                <td>172.20.28.29</td>
+                <td>MNINFOSPHERESTREAMS_001</td>
+                <td>BI</td>
+                <td>172.20.34.51</td>
+                <td>172.20.28.66</td>
                 <td>Escalado a Infra</td>
             </tr>
             <!-- Repetir el formato para otras filas -->
             <!-- Insertar filas de datos aquí -->
             <tr>
-                <td>MNEASYRPROD_ZEKE</td>
-                <td>GES PROYECTOS</td>
-                <td>172.20.34.29</td>
-                <td>172.20.28.29</td>
+                <td>MNCOGNOSBIPROD_001</td>
+                <td>BI</td>
+                <td>172.20.34.52</td>
+                <td>172.20.28.67</td>
                 <td>Escalado a Infra</td>
             </tr>
             <!-- Repetir el formato para otras filas -->
             <!-- Insertar filas de datos aquí -->
             <tr>
-                <td>MNEASYRPROD_ZEKE</td>
-                <td>GES PROYECTOS</td>
-                <td>172.20.34.29</td>
-                <td>172.20.28.29</td>
+                <td>MNSPSSSTATICS_CLIENT_001</td>
+                <td>BI</td>
+                <td>172.20.34.53</td>
+                <td>172.20.28.68</td>
                 <td>Escalado a Infra</td>
             </tr>
             <!-- Repetir el formato para otras filas -->
             <!-- Insertar filas de datos aquí -->
             <tr>
-                <td>MNEASYRPROD_ZEKE</td>
-                <td>GES PROYECTOS</td>
-                <td>172.20.34.29</td>
-                <td>172.20.28.29</td>
-                <td>Escalado a Infra</td>
+                <td>MNDEMENCIA-APP_PROD</td>
+                <td>DEMENCIAS</td>
+                <td>192.168.70.69</td>
+                <td>172.20.24.144</td>
+                <td>Escalado a Infra #3 / Emilio no tiene información</td>
             </tr>
             <!-- Repetir el formato para otras filas -->
             <!-- Insertar filas de datos aquí -->
             <tr>
-                <td>MNEASYRPROD_ZEKE</td>
-                <td>GES PROYECTOS</td>
-                <td>172.20.34.29</td>
-                <td>172.20.28.29</td>
+                <td>MNPASTILLERO001_APP_PROD</td>
+                <td>PASTILLERO</td>
+                <td>192.168.70.95</td>
+                <td>172.20.24.236</td>
                 <td>Escalado a Infra</td>
             </tr>
             <!-- Repetir el formato para otras filas -->
